fix(navigation-footer): PCCK-13055 Fix bottom spacing of items

--- a/core/ui-kit/src/modules/navigation/navigation-footer.scss
+++ b/core/ui-kit/src/modules/navigation/navigation-footer.scss
@@ -19,6 +19,7 @@
     }
 
     @include breakpoint('s') {
+      @include -spacing-b(bottom, margin, '-');
       display: block;
       border-top: 0;
       border-bottom: 0;
@@ -85,7 +86,7 @@
   }
 
   &__submenu-item {
-    @include -spacing-b(bottom);
+    @include -spacing-b(bottom, padding);
   }
 
   &__submenu-link {
